{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 15,
  "lineage": "d4cd35b4-c097-ff83-e6e8-265f3b88d112",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "the-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382519638:internet-gateway/igw-05a05e3ae8608b5a7",
            "id": "igw-05a05e3ae8608b5a7",
            "owner_id": "992382519638",
            "tags": {
              "Name": "the-IGW"
            },
            "tags_all": {
              "Name": "the-IGW"
            },
            "vpc_id": "vpc-0ffce09fd00a39134"
          },
          "dependencies": [
            "aws_vpc.the"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "the-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382519638:route-table/rtb-0bb198d6278281d58",
            "id": "rtb-0bb198d6278281d58",
            "owner_id": "992382519638",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a05e3ae8608b5a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "the-pub-RT"
            },
            "tags_all": {
              "Name": "the-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffce09fd00a39134"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.the-IGW",
            "aws_vpc.the"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "the-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09568dc68c02ba96f",
            "route_table_id": "rtb-0bb198d6278281d58",
            "subnet_id": "subnet-0b00577634dae07cd"
          },
          "dependencies": [
            "aws_internet_gateway.the-IGW",
            "aws_route_table.the-pub-RT",
            "aws_subnet.the-pub-1",
            "aws_vpc.the"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "the-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0607d9b7c3e5b7036",
            "route_table_id": "rtb-0bb198d6278281d58",
            "subnet_id": "subnet-0699667c0587d685b"
          },
          "dependencies": [
            "aws_internet_gateway.the-IGW",
            "aws_route_table.the-pub-RT",
            "aws_subnet.the-pub-2",
            "aws_vpc.the"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "the-pub-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014b8cbc61534bd61",
            "route_table_id": "rtb-0bb198d6278281d58",
            "subnet_id": "subnet-0a5ad67f978503f3b"
          },
          "dependencies": [
            "aws_internet_gateway.the-IGW",
            "aws_route_table.the-pub-RT",
            "aws_subnet.the-pub-3",
            "aws_vpc.the"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "the_stack-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382519638:security-group/sg-08e0b4c844a7f37aa",
            "description": "security group for THE ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e0b4c844a7f37aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "24.185.148.25/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "the_stack-sg",
            "name_prefix": "",
            "owner_id": "992382519638",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "the_stack-sg"
            },
            "tags_all": {
              "Name": "the_stack-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffce09fd00a39134"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.the"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "the-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382519638:subnet/subnet-02f6861c2a2b3a8b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f6861c2a2b3a8b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382519638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "the-priv-1"
            },
            "tags_all": {
              "Name": "the-priv-1"
            },
            "vpc_id": "vpc-0ffce09fd00a39134"
          },
          "dependencies": [
            "aws_vpc.the"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "the-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382519638:subnet/subnet-04f80b904bac2de6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f80b904bac2de6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382519638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "the-priv-2"
            },
            "tags_all": {
              "Name": "the-priv-2"
            },
            "vpc_id": "vpc-0ffce09fd00a39134"
          },
          "dependencies": [
            "aws_vpc.the"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "the-priv-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382519638:subnet/subnet-0032fd4773f0b2df8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0032fd4773f0b2df8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382519638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "the-priv-3"
            },
            "tags_all": {
              "Name": "the-priv-3"
            },
            "vpc_id": "vpc-0ffce09fd00a39134"
          },
          "dependencies": [
            "aws_vpc.the"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "the-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382519638:subnet/subnet-0b00577634dae07cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b00577634dae07cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382519638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "the-pub-1"
            },
            "tags_all": {
              "Name": "the-pub-1"
            },
            "vpc_id": "vpc-0ffce09fd00a39134"
          },
          "dependencies": [
            "aws_vpc.the"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "the-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382519638:subnet/subnet-0699667c0587d685b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0699667c0587d685b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382519638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "the-pub-2"
            },
            "tags_all": {
              "Name": "the-pub-2"
            },
            "vpc_id": "vpc-0ffce09fd00a39134"
          },
          "dependencies": [
            "aws_vpc.the"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "the-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382519638:subnet/subnet-0a5ad67f978503f3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5ad67f978503f3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382519638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "the-pub-3"
            },
            "tags_all": {
              "Name": "the-pub-3"
            },
            "vpc_id": "vpc-0ffce09fd00a39134"
          },
          "dependencies": [
            "aws_vpc.the"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "the",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382519638:vpc/vpc-0ffce09fd00a39134",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084077905ce91774a",
            "default_route_table_id": "rtb-0f06bf8ba8e0ae7c7",
            "default_security_group_id": "sg-0670842d065ee3298",
            "dhcp_options_id": "dopt-0f358a4d63357a6c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ffce09fd00a39134",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f06bf8ba8e0ae7c7",
            "owner_id": "992382519638",
            "tags": {
              "Name": "the-vpc"
            },
            "tags_all": {
              "Name": "the-vpc"
            }
          }
        }
      ]
    }
  ]
}